feat: links should work haha

--- a/AZIL/index.html
+++ b/AZIL/index.html
@@ -23,38 +23,38 @@
   <div id="top-bar">
     <div class="navbar">
       <div id="logo-desktop">
-        <a><img src="Projet Web S6/HELP/icone/icone_site.svg" alt="logo site"></a>
-        <a href="Projet Web S6/HELP/index.html">My Network</a>
-        <a href="Projet Web S6/NAPS/index.html">Solutions (NAPS)</a>
+        <a><img src="../../Projet Web S6/HELP/icone/icone_site.svg" alt="logo site"></a>
+        <a href="../../Projet Web S6/HELP/index.html">My Network</a>
+        <a href="../../Projet Web S6/NAPS/index.html">Solutions (NAPS)</a>
         <div class="dropdown">
           <button class="dropbtn">Regions
-            <i class="fa fa-caret-down"><img src="Projet Web S6/HELP/icone/fleche_verticale.svg"></i>
+            <i class="fa fa-caret-down"><img src="../../Projet Web S6/HELP/icone/fleche_verticale.svg"></i>
           </button>
           <div class="dropdown-content">
-            <a href="Projet Web S6/4VVV/index.html">4VVV</a>
-            <a href="Projet Web S6/RAND/index.html">RAND</a>
-            <a href="Projet Web S6/POKE/index.html">POKE</a>
+            <a href="../../Projet Web S6/4VVV/index.html">4VVV</a>
+            <a href="../../Projet Web S6/RAND/index.html">RAND</a>
+            <a href="../../Projet Web S6/POKE/index.html">POKE</a>
           </div>
         </div>
         <div class="dropdown">
           <button class="dropbtn">Locations
-            <i class="fa fa-caret-down"><img src="Projet Web S6/HELP/icone/fleche_verticale.svg"></i>
+            <i class="fa fa-caret-down"><img src="../../Projet Web S6/HELP/icone/fleche_verticale.svg"></i>
           </button>
           <div class="dropdown-content">
-            <a href="Projet Web S6/AZIL/index.html">AZIL</a>
-            <a href="Projet Web S6/HELP/index.html">HELP</a>
+            <a href="../../Projet Web S6/AZIL/index.html">AZIL</a>
+            <a href="../../Projet Web S6/HELP/index.html">HELP</a>
           </div>
         </div>
       </div>
       <div id="logo-phone">
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="Projet Web S6/HELP/icone/icone_site.svg" alt="logo site">
+            <img src="../../Projet Web S6/HELP/icone/icone_site.svg" alt="logo site">
           </button>
           <div class="dropdown-content">
-            <a href="Projet Web S6/4VVV/index.html">4VVV</a>
-            <a href="Projet Web S6/RAND/index.html">RAND</a>
-            <a href="Projet Web S6/POKE/index.html">POKE</a>
+            <a href="../../Projet Web S6/4VVV/index.html">4VVV</a>
+            <a href="../../Projet Web S6/RAND/index.html">RAND</a>
+            <a href="../../Projet Web S6/POKE/index.html">POKE</a>
           </div>
         </div>
         <a> Home > Networking > Flexible </a>
@@ -75,5 +75,5 @@
   <!-- FIN HTML CONTENU - VOTRE SECTION -->
 </div>
 
-<script src="runtime.994aac2da0ccf608.js" type="module"></script><script src="polyfills.cf332740b1451e65.js" type="module"></script><script src="main.c49d6020128fa25d.js" type="module"></script></body>
+<script src="runtime.994aac2da0ccf608.js" type="module"></script><script src="polyfills.cf332740b1451e65.js" type="module"></script><script src="main.fded9bcd9066b901.js" type="module"></script></body>
 </html>
