RAND : rework of index page

--- a/RAND/regions_details.html
+++ b/RAND/regions_details.html
@@ -10,7 +10,7 @@
     <!-- FIN LIENS CSS NAVBAR - NE PAS TOUCHER -->
 
     <!-- DEBUT INTEGRATION LIENS CSS - VOTRE SECTION -->
-    <link rel="stylesheet" href="css/regions_details.css">
+    <link rel="stylesheet" href="CSS/regions_details.css">
     <!-- FIN INTEGRATION LIENS CSS - VOTRE SECTION -->
 
 </head>
@@ -40,7 +40,7 @@
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">Locations
-                            <i class="fa fa-caret-down"><img src="icone/fleche_verticale.svg"></i>
+                            <i class="fa fa-caret-down"><img src="../HELP/icone/fleche_verticale.svg"></i>
                         </button>
                         <div class="dropdown-content">
                             <a href="../AZIL/index.html">AZIL</a>
