RAND : update responsive for index

--- a/RAND/index.html
+++ b/RAND/index.html
@@ -94,28 +94,28 @@
                 </li>
             </ul>
         </div>
-        <div id="add_region">
+        <a id="add_region">
             <img src="../HELP/icone/plus.svg" alt="plus">
             <div id="add_region_text">
                 Add a new region
             </div>
-        </div>
+        </a>
     </div>
         <div id="action_navbar_wrapper">
             <div id="action_button">
                 <button>Action</button>
-                <img src="../HELP/icone/fleche_verticale.svg" alt="action">
+                <img src="../HELP/icone/fleche_verticale.svg" alt="action" class="img_responsive">
             </div>
             <div id="refresh_button">
-                <img src="../HELP/icone/refresh.svg" alt="refresh">
+                <img src="../HELP/icone/refresh.svg" alt="refresh" class="img_responsive">
                 <button>Refresh</button>
             </div>
             <div id="search">
                 <input id="search_navbar" placeholder="Search for ...">
-                <img id="img_search" src="../HELP/icone/loupe.svg" alt="loupe">
+                <img id="img_search" src="../HELP/icone/loupe.svg" alt="loupe" class="img_responsive">
             </div>
             <div id="filter_navbar">
-                <img src="../HELP/icone/tri.svg" alt="tri">
+                <img src="../HELP/icone/tri.svg" alt="tri" class="img_responsive">
                 <button>Filtrer</button>
             </div>
         </div>
@@ -136,23 +136,23 @@
                     Region
                     <img src="../HELP/icone/fleche_tri.svg" alt="fleche_tri">
                 </th>
-                <th>
+                <th class="table_responsive">
                     Vendor
                     <img src="../HELP/icone/fleche_tri.svg" alt="fleche_tri">
                 </th>
-                <th>
+                <th class="table_responsive">
                     Network
                     <img src="../HELP/icone/fleche_tri.svg" alt="fleche_tri">
                 </th>
-                <th>
+                <th class="table_responsive">
                     Gateways
                     <img src="../HELP/icone/fleche_tri.svg" alt="fleche_tri">
                 </th>
-                <th>
+                <th class="table_responsive">
                     Locations
                     <img src="../HELP/icone/fleche_tri.svg" alt="fleche_tri">
                 </th>
-                <th>
+                <th class="table_responsive">
                     Edges
                     <img src="../HELP/icone/fleche_tri.svg" alt="fleche_tri">
                 </th>
@@ -177,19 +177,19 @@
                 <td>
                     Region Name
                 </td>
-                <td>
+                <td class="table_responsive">
                     VMWARE
                 </td>
-                <td>
+                <td class="table_responsive">
                     Network Name
                 </td>
-                <td>
+                <td class="table_responsive">
                     4
                 </td>
-                <td>
+                <td class="table_responsive">
                     30
                 </td>
-                <td>
+                <td class="table_responsive">
                     15
                 </td>
                 <td class="td_last">
@@ -213,19 +213,19 @@
                 <td>
                     Region Name
                 </td>
-                <td>
+                <td class="table_responsive">
                     VMWARE
                 </td>
-                <td>
+                <td class="table_responsive">
                     Network Name
                 </td>
-                <td>
+                <td class="table_responsive">
                     4
                 </td>
-                <td>
+                <td class="table_responsive">
                     30
                 </td>
-                <td>
+                <td class="table_responsive">
                     15
                 </td>
                 <td class="td_last">
@@ -249,19 +249,19 @@
                 <td>
                     Region Name
                 </td>
-                <td>
+                <td class="table_responsive">
                     VMWARE
                 </td>
-                <td>
+                <td class="table_responsive">
                     Network Name
                 </td>
-                <td>
+                <td class="table_responsive">
                     4
                 </td>
-                <td>
+                <td class="table_responsive">
                     30
                 </td>
-                <td>
+                <td class="table_responsive">
                     15
                 </td>
                 <td class="td_last">
@@ -284,19 +284,19 @@
                 <td>
                     Region Name
                 </td>
-                <td>
+                <td class="table_responsive">
                     VMWARE
                 </td>
-                <td>
+                <td class="table_responsive">
                     Network Name
                 </td>
-                <td>
+                <td class="table_responsive">
                     4
                 </td>
-                <td>
+                <td class="table_responsive">
                     30
                 </td>
-                <td>
+                <td class="table_responsive">
                     15
                 </td>
                 <td class="td_last">
@@ -319,19 +319,19 @@
                 <td>
                     Region Name
                 </td>
-                <td>
+                <td class="table_responsive">
                     VMWARE
                 </td>
-                <td>
+                <td class="table_responsive">
                     Network Name
                 </td>
-                <td>
+                <td class="table_responsive">
                     4
                 </td>
-                <td>
+                <td class="table_responsive">
                     30
                 </td>
-                <td>
+                <td class="table_responsive">
                     15
                 </td>
                 <td class="td_last">
