bouton close (html)

--- a/NAPS/index.html
+++ b/NAPS/index.html
@@ -243,7 +243,7 @@
   <div id="first_part">
  
   <div id="close">
-  <img src="../HELP/icone/croix.svg" />
+  <img src="../HELP/icone/croix.svg" onclick="Close()"/>
   <p>Close</p>
   </div>
 
