--- a/HELP/index.html
+++ b/HELP/index.html
@@ -19,52 +19,72 @@
 <!-- DEBUT HTML NAVBAR - PAS TOUCHER -->
 
 <header>
-
   <div id="top-bar">
     <div class="navbar">
       <div id="logo-desktop">
-        <a><img src="icone/icone_site.svg" alt="logo site"></a>
-    <a href="index.html">My Network</a>
-    <a href="NAPS/index.html">Solutions (NAPS)</a>
-    <div class="dropdown">
-      <button class="dropbtn">Regions
-        <i class="fa fa-caret-down"><img src="icone/fleche_verticale.svg"></i>
-      </button>
-      <div class="dropdown-content">
-        <a href="4VVV/index.html">4VVV</a>
-        <a href="RAND/index.html">RAND</a>
-        <a href="POKE/index.html">POKE</a>
+        <a><img src="../HELP/icone/icone_site.svg" alt="logo site"></a>
+        <a href="../index.html">Index</a>
+        <a href="../NAPS/index.html">NAPS</a>
+        <div class="dropdown">
+          <button class="dropbtn">Liste 1
+            <i class="fa fa-caret-down"><img src="../HELP/icone/fleche_verticale.svg"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="../4VVV/index.html">4VVV</a>
+            <a href="../RAND/index.html">RAND1</a>
+            <a href="../RAND/regions_details.html">RAND2</a>
+            <a href="../POKE/index.html">POKE</a>
+          </div>
+        </div>
+        <div class="dropdown">
+          <button class="dropbtn">Liste 2
+            <i class="fa fa-caret-down"><img src="../HELP/icone/fleche_verticale.svg"></i>
+          </button>
+          <div class="dropdown-content">
+            <a href="../AZIL/index.html">AZIL</a>
+            <a href="../HELP/index.html">HELP1</a>
+            <a href="../HELP/cockpit.html">HELP2</a>
+          </div>
+        </div>
+      </div>
+      <a id ="profile">
+        <div id = "profile-picture"><img src = "../HELP/icone/profile.svg"></div>
+        <div id = "profile-firstname">FirstName</div>
+        <div id = "profile-lastname">LastName</div>
+      </a>
+      <div id="logo-tablet">
+        <div class="dropdown">
+          <button class="dropbtn">
+            <img src="../HELP/icone/icone_site.svg" alt="logo site">
+          </button>
+          <div class="dropdown-content">
+            <a href="../4VVV/index.html">4VVV</a>
+            <a href="../RAND/index.html">RAND1</a>
+            <a href="../RAND/regions_details.html">RAND2</a>
+            <a href="../POKE/index.html">POKE</a>
+            <a href="../AZIL/index.html">AZIL</a>
+            <a href="../HELP/index.html">HELP1</a>
+            <a href="../HELP/cockpit.html">HELP2</a>
+          </div>
+        </div>
+        <div id = "tablet-text">
+          <a>Home
+            <img src="../HELP/icone/fleche_horizontale.svg" alt=">"></a>
+          <a>Networking
+            <img src="../HELP/icone/fleche_horizontale.svg" alt=">"></a>
+          <a>Flexible
+            <img src="../HELP/icone/fleche_horizontale.svg" alt=">"></a>
+        </div>
+        <div id ="phone-text">
+          Menu
+        </div>
       </div>
     </div>
-      <div class="dropdown">
-        <button class="dropbtn">Locations
-          <i class="fa fa-caret-down"><img src="icone/fleche_verticale.svg"></i>
-        </button>
-        <div class="dropdown-content">
-          <a href="AZIL/index.html">AZIL</a>
-          <a href="HELP/index.html">HELP</a>
-        </div>
-        </div>
-      </div>
-      <div id="logo-phone">
-        <div class="dropdown">
-        <button class="dropbtn">
-          <img src="icone/icone_site.svg" alt="logo site">
-        </button>
-        <div class="dropdown-content">
-          <a href="4VVV/index.html">4VVV</a>
-          <a href="RAND/index.html">RAND</a>
-          <a href="POKE/index.html">POKE</a>
-        </div>
-        </div>
-          <a> Home > Networking > Flexible </a>
-      </div>
-  </div>
   </div>
 
-<div id="bottom-bar">
-  <p> Home   >   Networking   >   Flexible </p>
-</div>
+  <div id="bottom-bar">
+    <p>Home  >  Networking  >  Flexible </p>
+  </div>
 </header>
 
 <!-- FIN HTML NAVBAR - PAS TOUCHER -->
