last version of azil with cockpit not working (thx angular haha)

--- a/AZIL/index.html
+++ b/AZIL/index.html
@@ -13,57 +13,77 @@
 
   <!-- FIN INTEGRATION LIENS CSS - VOTRE SECTION -->
 
-<style>:root{--primary-color:#012c10;--light-grey:#F4F4F4;--white:#ffffff;--grey:#CCCCCC;--primary-font:Inter, sans-serif;--text-color:#000000;--header-color:#CFA40B;--orange:#F16E00;--light-red:#FDE5E6;--light-yellow:#FFFAE7;--active:#3DE35A;--degraded:#FFCD0B;--inactive:#E70002}body{font-family:var(--primary-font);margin:0;padding:0}#top-bar{background-color:var(--primary-color);color:var(--white);padding:10px 20px;display:flex;justify-content:space-between;align-items:center}#bottom-bar{padding:10px 20px;font-size:14px;display:flex;align-items:center;background-color:var(--white)}@media only screen and (max-width: 500px){#logo-desktop{display:none}#bottom-bar{display:none}}@media only screen and (min-width: 501px){#content{display:flex;margin-left:3%}#logo-phone{display:none}#logo-desktop{display:flex}}.navbar{overflow:hidden}.navbar a{float:left;font-size:16px;color:var(--white);text-align:center;padding:14px 16px;text-decoration:none}.dropdown{float:left;overflow:hidden}.dropdown .dropbtn{font-size:16px;border:none;outline:none;color:var(--white);padding:14px 16px;background-color:inherit;font-family:inherit;margin:0}.navbar a:hover,.dropdown:hover .dropbtn{background-color:var(--orange);color:#000}.dropdown-content{display:none;position:absolute;background-color:var(--light-grey);min-width:160px;box-shadow:0 8px 16px #0003;z-index:1}.dropdown-content a{float:none;color:var(--text-color);padding:12px 16px;text-decoration:none;display:block;text-align:left}.dropdown-content a:hover{background-color:#ddd}.dropdown:hover .dropdown-content{display:block}.fa-caret-down{color:var(--orange)}</style><link rel="stylesheet" href="styles.0b6e091a87567848.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.0b6e091a87567848.css"></noscript></head>
+<style>:root{--primary-color:#012c10;--light-grey:#F4F4F4;--white:#ffffff;--grey:#CCCCCC;--primary-font:Inter, sans-serif;--text-color:#000000;--header-color:#CFA40B;--orange:#F16E00;--light-red:#FDE5E6;--light-yellow:#FFFAE7;--active:#3DE35A;--degraded:#FFCD0B;--inactive:#E70002}body{font-family:var(--primary-font);margin:0;padding:0}#top-bar{background-color:var(--primary-color);color:var(--white);padding:10px 20px;display:flex;justify-content:space-between;align-items:center}#bottom-bar{padding:10px 20px;font-size:14px;display:flex;align-items:center;background-color:var(--white);margin-left:3%}#profile{display:inline-flex;float:right;font-size:18px;color:var(--white);text-align:right}#profile-lastname{padding-left:5px}#profile-firstname{padding-left:15px}@media only screen and (max-width: 900px){#profile-lastname,#profile-firstname{display:none}}@media only screen and (min-width: 901px){#profile-lastname,#profile-firstname{display:flex}}@media screen and (max-width: 610px){#logo-desktop{display:none}#bottom-bar{display:none}}@media screen and (min-width: 611px){#content{display:flex;margin-left:3%}#logo-tablet{display:none}#logo-desktop{display:block}}@media screen and (min-width: 546px){#tablet-text{display:inline-flex}#phone-text{display:none}}@media screen and (max-width: 545px){#tablet-text{display:none}#phone-text{margin:auto;text-align:center;padding:14px 16px;font-size:20px}}.navbar{overflow:hidden;width:100%}.navbar a{float:left;font-size:18px;color:var(--white);text-align:center;padding:14px 16px;text-decoration:none}.dropdown{float:left;overflow:hidden}.dropdown .dropbtn{font-size:18px;border:none;outline:none;color:var(--white);padding:14px 16px;background-color:inherit;font-family:inherit;margin:0}.navbar a:hover,.dropdown:hover .dropbtn{background-color:var(--orange);color:#000}.dropdown-content{display:none;position:absolute;background-color:var(--light-grey);min-width:160px;box-shadow:0 8px 16px #0003;z-index:1}.dropdown-content a{float:none;color:var(--text-color);padding:12px 16px;text-decoration:none;display:block;text-align:left}.dropdown-content a:hover{background-color:#ddd}.dropdown:hover .dropdown-content{display:block}.fa-caret-down{color:var(--orange)}</style><link rel="stylesheet" href="styles.cc679cbcf72ad176.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.cc679cbcf72ad176.css"></noscript></head>
 <body>
 
 <!-- DEBUT HTML NAVBAR - PAS TOUCHER -->
 
 <header>
-
   <div id="top-bar">
     <div class="navbar">
       <div id="logo-desktop">
-        <a><img src="../../Projet Web S6/HELP/icone/icone_site.svg" alt="logo site"></a>
-        <a href="../../Projet Web S6/HELP/index.html">My Network</a>
-        <a href="../../Projet Web S6/NAPS/index.html">Solutions (NAPS)</a>
+        <a><img src="../HELP/icone_site.svg" alt="logo site"></a>
+        <a href="../HELP/index.html">Index</a>
+        <a href="../NAPS/index.html">NAPS</a>
         <div class="dropdown">
-          <button class="dropbtn">Regions
-            <i class="fa fa-caret-down"><img src="../../Projet Web S6/HELP/icone/fleche_verticale.svg"></i>
+          <button class="dropbtn">Liste 1
+            <i class="fa fa-caret-down"><img src="../HELP/icone/fleche_verticale.svg"></i>
           </button>
           <div class="dropdown-content">
-            <a href="../../Projet Web S6/4VVV/index.html">4VVV</a>
-            <a href="../../Projet Web S6/RAND/index.html">RAND</a>
-            <a href="../../Projet Web S6/POKE/index.html">POKE</a>
+            <a href="../4VVV/index.html">4VVV</a>
+            <a href="../RAND/index.html">RAND1</a>
+            <a href="../RAND/regions_details.html">RAND2</a>
+            <a href="../POKE/index.html">POKE</a>
           </div>
         </div>
         <div class="dropdown">
-          <button class="dropbtn">Locations
-            <i class="fa fa-caret-down"><img src="../../Projet Web S6/HELP/icone/fleche_verticale.svg"></i>
+          <button class="dropbtn">Liste 2
+            <i class="fa fa-caret-down"><img src="../HELP/icone/fleche_verticale.svg"></i>
           </button>
           <div class="dropdown-content">
-            <a href="../../Projet Web S6/AZIL/index.html">AZIL</a>
-            <a href="../../Projet Web S6/HELP/index.html">HELP</a>
+            <a href="../AZIL/index.html">AZIL</a>
+            <a href="../HELP/index.html">HELP1</a>
+            <a href="../HELP/cockpit.html">HELP2</a>
           </div>
         </div>
       </div>
-      <div id="logo-phone">
+      <a id="profile">
+        <div id="profile-picture"><img src="../HELP/profile.svg"></div>
+        <div id="profile-firstname">FirstName</div>
+        <div id="profile-lastname">LastName</div>
+      </a>
+      <div id="logo-tablet">
         <div class="dropdown">
           <button class="dropbtn">
-            <img src="../../Projet Web S6/HELP/icone/icone_site.svg" alt="logo site">
+            <img src="../HELP/icone/icone_site.svg" alt="logo site">
           </button>
           <div class="dropdown-content">
-            <a href="../../Projet Web S6/4VVV/index.html">4VVV</a>
-            <a href="../../Projet Web S6/RAND/index.html">RAND</a>
-            <a href="../../Projet Web S6/POKE/index.html">POKE</a>
+            <a href="../4VVV/index.html">4VVV</a>
+            <a href="../RAND/index.html">RAND1</a>
+            <a href="../RAND/regions_details.html">RAND2</a>
+            <a href="../POKE/index.html">POKE</a>
+            <a href="../AZIL/index.html">AZIL</a>
+            <a href="../HELP/index.html">HELP1</a>
+            <a href="../HELP/cockpit.html">HELP2</a>
           </div>
         </div>
-        <a> Home > Networking > Flexible </a>
+        <div id="tablet-text">
+          <a>Home
+            <img src="../HELP/fleche_horizontale.svg" alt=">"></a>
+          <a>Networking
+            <img src="../HELP/fleche_horizontale.svg" alt=">"></a>
+          <a>Flexible
+            <img src="../HELP/fleche_horizontale.svg" alt=">"></a>
+        </div>
+        <div id="phone-text">
+          Menu
+        </div>
       </div>
     </div>
   </div>
 
   <div id="bottom-bar">
-    <p> Home   >   Networking   >   Flexible </p>
+    <p>Home  >  Networking  >  Flexible </p>
   </div>
 </header>
 
@@ -74,6 +94,5 @@
   <app-root></app-root>
   <!-- FIN HTML CONTENU - VOTRE SECTION -->
 </div>
-
-<script src="runtime.994aac2da0ccf608.js" type="module"></script><script src="polyfills.cf332740b1451e65.js" type="module"></script><script src="main.fded9bcd9066b901.js" type="module"></script></body>
+<script src="runtime.994aac2da0ccf608.js" type="module"></script><script src="polyfills.cf332740b1451e65.js" type="module"></script><script src="main.dc0af64fd8e63c72.js" type="module"></script></body>
 </html>
